# bblocks

./: .bump2version.cfg  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  README.rst  coverage.xml  default.mk  makefile  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-feature.md
.github/workflows/: CI.yaml  dev.yml  documentation.yaml  draft_release.yaml  preview.yml  release.yaml  release.yml
bblocks/: __init__.py  cli.py  config.py  ex.py  logger.py
bblocks/.raw_data/: README.md
bblocks/analysis_tools/: get.py
bblocks/cleaning_tools/: clean.py  common.py  filter.py
bblocks/dataframe_tools/: add.py  change.py  common.py
bblocks/import_tools/: README.md  aids_indicators.json  common.py  fao.py  hdr.py  ilo.py  imf.py  imf_weo.py  sdr.py  un_population.py  unaids.py  unzip.py  weo.py  weo_depreciated.py  weo_new.py  wfp.py  who.py  world_bank.py  world_bank_projects.py
bblocks/other_tools/: common.py  dictionaries.py
docs/: Makefile  api.md  bblocks.import_tools.rst  bblocks.rst  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  mkdocs.yml  modules.rst  usage.md  usage.rst
docs/docs/: bblocks-packages.md  getting-started.md  index.md
docs/source/: bblocks.analysis_tools.rst  bblocks.cleaning_tools.rst  bblocks.dataframe_tools.rst  bblocks.import_tools.debt.rst  bblocks.import_tools.rst  bblocks.other_tools.rst  bblocks.rst  conf.py  conf.py.save  index.rst  modules.rst
package/: config.py
package/import_tools/: common.py  unzip.py  world_bank.py
package/other_tools/: common.py  dictionaries.py
src/bblocks/: __init__.py
tests/: __init__.py  test_world_bank.py
tests/.tests_data/: CLD_TPOP_SEX_AGE_GEO_NB_A.csv  CLD_TPOP_SEX_AGE_NB_A.csv  CLD_XCHD_SEX_AGE_NB_A.csv  EN.POP.DNST_all_.csv  EN.POP.DNST_all_most_recent.csv  NY.GDP.MKTP.CD_2015-2018_.csv  SI.POV.DDAY_all_.csv  SI.POV.DDAY_all_most_recent.csv  SP.DYN.LE00.IN_all_most_recent.csv  SP.POP.TOTL_all_.csv  SP.POP.TOTL_all_most_recent.csv  sdr_exchange_rate.html  sdr_main_page.html
(+581 files in other folders)
