[project]
name = "bblocks"
version = "2.0.0"
description = "Building blocks for development data."
authors = [
    {name = "ONE Campaign"},
    {name = "Luca Picci",email = "lpicci96@gmail.com"},
    {name = "Jorge Rivera", email = "jorge.rivera@one.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[tool.poetry]
packages = [{include = "bblocks", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/ONEcampaign/bblocks"
documentation = "https://docs.one.org/tools/bblocks/"
homepage = "https://docs.one.org/tools/bblocks/"
