[project]
name = "bblocks"
version = "2.1.0-beta.2"
description = "Building blocks for development data."
authors = [
    {name = "ONE Campaign"},
    {name = "Luca Picci",email = "lpicci96@gmail.com"},
    {name = "Jorge Rivera", email = "jorge.rivera@one.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[project.optional-dependencies]
places = ["bblocks-places>=0.0.2,<0.1.0"]
data-importers = ["bblocks-data-importers>=0.4.0,<0.5.0"]
all = [
    "bblocks-places>=0.0.2,<0.1.0",
    "bblocks-data-importers>=0.4.0,<0.5.0"
]

[tool.poetry]
packages = [{include = "bblocks", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/ONEcampaign/bblocks"
documentation = "https://docs.one.org/tools/bblocks/"
homepage = "https://docs.one.org/tools/bblocks/"
